# zspell_lsp

./: .gitignore  Cargo.toml  README.md
src/: lexer.rs  main.rs  server.rs
