[package]
name = "zspell_lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
lsp-server = "0.7.6"
lsp-types = "0.95.1"
serde = "1.0.198"
serde_json = "1.0.116"
streaming-iterator = "0.1.9"
wildmatch = "2.3.3"
zspell = "0.5.3"
